feat(api): add javadoc comments to most API-related classes bump version number to 0.6.0-rc2